Unclutter designer console output
We turn off the css logger, and allow RichTextFX to access internal javafx API to avoid
the illegal access warning.